Fixed Text Too Small

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -138,7 +138,7 @@ h1{
     width: 100%;
 }
 p{
-    font-size: 2.5vw;
+    font-size: 3vw;
     width: 100%;
     text-align: center;
 }
